--- a/fontpage/templates/fontpage/index.html
+++ b/fontpage/templates/fontpage/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="{% static 'fontpage/index.css' %}">
 </head>
 <body>
-<form action="{% url 'mytry' %}" method="post">
+<form action="{% url 'index' %}" method="post">
 {% csrf_token %}
 	<input type="text" name="passs" />
 	<input type="submit" name="" />
